<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:background="@color/background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="@dimen/text_size_title"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_book_title"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/margin_small" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book_title"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_author"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/margin_small" />

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_year"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/margin_small" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_year"
        android:inputType="number"
        android:layout_marginBottom="@dimen/margin_large" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/btn_submit"
        android:backgroundTint="@color/button_color" />

</LinearLayout>
